--- a/index.html
+++ b/index.html
@@ -105,16 +105,16 @@
                         </picture>
                         <p class="black tmoji">チューナーの調子が悪い、録画ができない…<br>引越しのためアンテナの移設が必要…など、<br>お困りごとをサポートします！</p>
                         <div class="blue">
-                            <p>スカパー<i>！</i>試聴サポート</p>
+                            <p>スカパー<i>！</i>視聴サポート</p>
                         </div>
                         <div class="support1">
                             <picture>
                                 <source srcset="https://nmayu.github.io/premium/sp_tokuten3_1.png" media="(max-width: 760px)">
-                                <img class="cp" srcset="https://nmayu.github.io/premium/tokuten3_1.png" alt="試聴トラブルサポート">
+                                <img class="cp" srcset="https://nmayu.github.io/premium/tokuten3_1.png" alt="視聴トラブルサポート">
                             </picture> 
                             <hr color="#0099ff" width="90%">
                             <div>
-                                <p class="black cp3_1">スカパー<i>！</i>に関するトラブルサポート<br><span class="cp3_2">試聴トラブルサポート</span></p>
+                                <p class="black cp3_1">スカパー<i>！</i>に関するトラブルサポート<br><span class="cp3_2">視聴トラブルサポート</span></p>
                             </div>
                             <hr color="#0099ff" width="90%">
                             <p class="black cp3_3">「映りが悪い」や「録画ができない」など、スカパー<i>！</i>の<br>ご視聴に関することなら何でもお気軽にご相談ください。</p>
